+ Add basic story display + Add Arthur story + Refactoring - Add more option to story display   - Add points count   - Find the correct traduction to a sentence   - Add find orthographique mistakes   - Complete the sentence by chossing betwing propositions - Add more stories

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"noImplicitAny": true,
 		"removeComments": true,
 		"preserveConstEnums": true,
-		"types" : ["node", "impress", "vue", "vue-router"]
+		"types" : ["node", "vue", "vue-router"]
 	},
 	"include": [
 		"src/**/*.ts"
