--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "clarity-icons": "^0.7.1",
     "clarity-ui": "^0.7.1",
     "electron": "^1.4.6",
-    "impress.js": "^0.6.0",
     "vue": "^2.1.3",
     "vue-router": "^2.0.3"
   },
   "devDependencies": {
-    "@types/impress": "^0.5.28",
     "@types/node": "^6.0.51",
     "@types/vue": "^1.0.31",
     "@types/vue-router": "^0.7.27",
@@ -33,7 +31,7 @@
     "pug": "^2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "style-loader": "^0.13.1",
-    "typescript": "^2.0.10",
+    "typescript": "2.0.10",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-server": "^1.16.2"
   }
